função encontrarDoadorPorEmail e documentação no main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,5 @@ set(CMAKE_C_STANDARD 11)
 add_executable(projetoMaromo main.c
         tratamentoentrada.h
         tratamentoentrada.c
+        cadastrarDoador.h
 )
